2001-02-21  Michael Engber  <engber@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>
	             John Sullivan <sullivan@eazel.com>

	* libnautilus-extensions/Makefile.am:
	* libnautilus-extensions/nautilus-directory-metafile-monitor.h:
	* libnautilus-extensions/nautilus-directory-metafile-monitor.c:
	(nautilus_metafile_monitor_initialize_class),
	(nautilus_metafile_monitor_get_epv),
	(nautilus_metafile_monitor_get_vepv),
	(nautilus_metafile_monitor_create_servant),
	(nautilus_metafile_monitor_initialize), (destroy),
	(nautilus_metafile_monitor_new), (corba_metafile_changed):
	Added implementation of monitors for directories to recieve
	notification when their metadata changes. This works across
	processes.

	* libnautilus-extensions/nautilus-directory.c:
	(nautilus_directory_destroy),
	(nautilus_directory_emit_change_signals):
	* libnautilus-extensions/nautilus-directory-private.h:
	* libnautilus-extensions/nautilus-directory-async.c:
	(metafile_read_mark_done), (metafile_read_start),
	(nautilus_directory_monitor_add_internal),
	(update_metadata_monitors),
	(nautilus_directory_monitor_remove_internal),
	(nautilus_directory_call_when_ready_internal),
	(nautilus_directory_cancel_callback_internal),
	(nautilus_async_destroying_file), (request_is_satisfied),
	(call_ready_callbacks):
	The state machine now uses monitors in the metadata server
	process.

	* libnautilus-extensions/nautilus-directory-metafile.c:
	(get_metafile), (nautilus_directory_is_metadata_read),
	(nautilus_directory_get_file_metadata),
	(nautilus_directory_get_file_metadata_list),
	(nautilus_directory_set_file_metadata),
	(nautilus_directory_set_file_metadata_list),
	(nautilus_directory_set_boolean_file_metadata),
	(nautilus_directory_set_integer_file_metadata),
	(nautilus_directory_copy_file_metadata),
	(nautilus_directory_remove_file_metadata),
	(nautilus_directory_rename_file_metadata),
	(nautilus_directory_register_metadata_monitor),
	(nautilus_directory_unregister_metadata_monitor):